# pib3

./: .gitignore  .pre-commit-config.yaml  CALIBRATION.md  INSTALLATION.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docs.yml
docs/: index.md
docs/api/: ai-camera-subsystems.md  audio.md  config.md  hand-poses.md  image.md  index.md  kinematics.md  tools.md  trajectory.md  types.md
docs/api/backends/: base.md  robot.md  swift.md  webots.md
docs/architecture/: coordinates.md  overview.md  units.md
docs/contributing/: code-style.md  development.md  index.md
docs/getting-started/: calibration.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
docs/tutorials/: camera-ai-imu.md  controlling-robot.md  custom-configurations.md  image-to-trajectory.md  index.md  low-latency-mode.md  swift-visualization.md  working-with-sketches.md
examples/: Icon_IT_hover.json  audio_play_speak_and_record.py  basic_joint_control.py  camera_ai_imu_example.py  diagnose_connection.py  imu_visualization.py  model_switching_demo.py  monitor_ai_model.py  scan_and_draw.py  test_audio_simple.py  trajectory_playback.py  webots_drawing_controller.py
pib3/: __init__.py  config.py  dh_model.py  hand_poses.py  image.py  trajectory.py  types.py
pib3/backends/: __init__.py  audio.py  base.py  camera.py  robot.py  swift.py  webots.py
pib3/resources/: joint_limits.yaml  joint_limits_robot.yaml  joint_limits_webots.yaml  pib.proto
pib3/tools/: calibrate_joints.py  list_topics.py  proto_converter.py
pib_ik/: __init__.py  config.py  hand_poses.py  image.py  trajectory.py  types.py
pib_ik/backends/: __init__.py  base.py  robot.py  swift.py  webots.py
pib_ik/resources/: joint_limits.yaml  joint_limits_robot.yaml  joint_limits_webots.yaml  pib_model.urdf  robot_limits.yaml
pib_ik/tools/: __init__.py  calibrate_joints.py  proto_converter.py
test/: diagnose_ik.py  test_debug.py  test_pencil_grip.py  test_simple.py  test_simple_ik.py  test_simple_no_viz.py  test_swift_headless.py  test_swift_server.py
tests/: README.md  __init__.py  conftest.py  diagnose_connection.py  read_servo_calibration.py  test_low_latency.py  test_low_latency_elbows.py  test_low_latency_hands.py  test_tinkerforge_optimization.py  test_trajectory.py
