[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pib3"
version = "0.1.1"
description = "Inverse kinematics and trajectory generation for the PIB humanoid robot"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "PIB Rocks Team"},
]
keywords = [
    "robotics",
    "inverse-kinematics",
    "pib",
    "humanoid-robot",
    "trajectory-generation",
    "drawing-robot",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "numpy>=1.20.0,<2.0",  # roboticstoolbox/spatialmath not yet compatible with numpy 2.x
    "Pillow>=8.0.0",
    "PyYAML>=5.0.0",
    "roboticstoolbox-python>=1.0.0",
    "spatialmath-python>=1.0.0,<1.1.15",  # Pin to avoid axis parsing issues
    "scikit-image>=0.18.0",
    "swift-sim>=1.0.0",
    "spatialgeometry>=1.0.0",
    "websockets>=10.0,<11.0",  # swift-sim 1.x requires websockets 10.x
    "roslibpy>=1.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mamrehn/pib3"
Documentation = "https://github.com/mamrehn/pib3#readme"
Repository = "https://github.com/mamrehn/pib3.git"
Issues = "https://github.com/mamrehn/pib3/issues"

[tool.setuptools]
packages = ["pib3", "pib3.backends", "pib3.tools"]

[tool.setuptools.package-data]
pib3 = ["resources/*.urdf", "resources/*.proto", "resources/*.yaml", "resources/stl/*.stl"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
